--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="login">Log In</string>
     <string name="username">Username</string>
     <string name="email">Email:</string>
+    <string name="wrongus">Wrong Username</string>
+    <string name="wrongpas">Wrong password</string>
     <string name="pass">Password:</string>
     <string name="create">Create Account</string>
     <string name="signUp">Sign Up</string>
@@ -14,5 +16,6 @@
     <string name="back">Home</string>
     <string name="welcome_back">Welcome Back!</string>
     <string name="start">Getting Started</string>
+    <string name="dont">Create account?</string>
     <string name="about">Wanna Know about Palestine? Paltales let\'s explore movies and books about Palestine</string>
 </resources>
