--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="welcome_back">Welcome Back!</string>
     <string name="start">Getting Started</string>
     <string name="dont">Create account?</string>
+    <string name="backk">Back To List</string>
     <string name="already">Already have account?</string>
     <string name="about">Wanna Know about Palestine? Paltales let\'s explore movies and books about Palestine</string>
 </resources>
