--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="backk">Back To List</string>
     <string name="already">Already have account?</string>
     <string name="about">Wanna Know about Palestine? Paltales let\'s explore movies and books about Palestine</string>
+    <string name="try_again">Try Again!</string>
 </resources>
