Refactor: remove unused & edit typo string value

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,6 @@
     <string name="dont">Create account?</string>
     <string name="backk">Back To List</string>
     <string name="already">Already have account?</string>
-    <string name="about">Wanna Know about Palestine? Paltales let\'s explore movies and books about Palestine</string>
+    <string name="about">Want to Know about Palestine? let\'s explore Palestinian Tales with PalTales</string>
     <string name="try_again">Try Again!</string>
 </resources>
